대충 회색 픽셀은 날리는데 다른 색의 바탕에는 날리지 못하고 있는중.